# nhl-legacy-recomp

./: .gitattributes  .gitignore  CMakeLists.txt  DEV-README.md  README.md  _build_vk.bat  _build_vk_opt.bat  _build_vk_pgo.bat  _build_vk_pgogen.bat
data/: nhllegacy.manifest.json
docs/: current-status.md  fidelityfx-enablement-notes.md  highcut-c-plume-renderer-plan.md  highcut-c5d-per-surface-prompt.md  highcut-h3-flat-rt.md  highcut-m0-vendoring.md  highcut-m1-tap-correlation.md  linux.md  rexglue-vulkan-nhl-legacy.patch  wasm-implementation-plan.md
gpu/hooks/: d3d9_resources.cpp  d3d9_tap.cpp  highcut_draw_packet.h  highcut_spirv_probe.cpp  plume_present.cpp
gpu/hooks/shaders/: solid.hlsl
gpu/smoke/: CMakeLists.txt  _build_smoke.bat  main.cpp
gpu/spirv/: spirv_shader_translator.cc
linux/: build.sh  mise.toml  run.sh
linux/docker/: Dockerfile  entrypoint.sh  install_glslang.sh  install_toolchain.sh  setup_mise_toolchain.sh
linux/lib/: assemble.sh  common.sh  compile.sh  rexglue.sh
release/: package.ps1
renderer/core/: nhl_command_processor.cpp  nhl_command_processor.h  nhl_overlay.cpp  nhl_overlay.h  nhl_settings.h  nhl_vk_backend.cpp
renderer/shaders/: nhl_grade.comp  nhl_grade_cs.h
scripts/: _anim_compile.bat  _build_vk.bat  _build_vk_opt.bat  _build_vk_pgo.bat  _build_vk_pgogen.bat  _ffx_dll_build.bat  _live.ps1
src/: anim_decode.cpp  anim_decode.h  cpu_affinity.cpp  diag_hooks.cpp  http_range_device.cpp  http_range_device.h  loose_tree_device.cpp  lzx_decompress.h  nhllegacy_app.h  overall_weights_dump.h  stick_caller_trace.h  stick_list_scan.h  tunable_registry_dump.h  tunable_runtime.h
src/wasm/: kernel_stubs.cpp  runtime_stubs.cpp  sdk_runtime.cpp  vfs_bridge.h  wasm_main.cpp  webgpu_command_processor.cpp  webgpu_command_processor.h  webgpu_graphics_system.cpp  webgpu_graphics_system.h  windowed_app_context_html5.cpp  windowed_app_context_html5.h
tools/: enable_crash_dumps.ps1  highcut_packet_decode.py  parse_minidump.py
tools/replay/src/: image_dump.cpp
tools/web/: extract_assets.py  pack_bundle.py
web/: CMakeLists.txt  Dockerfile  WASM_DESIGN.md  WEBGPU_BACKEND.md  build.sh  data  launcher.html  nhllegacy.js  nhllegacy.wasm  serve.py
web/lib/: compile.sh
web/patches/: emscripten_compat.h
web/patches/rex/: platform.h
web/patches/rex/chrono/: chrono.h  chrono_steady_cast.h
web/patches/rex/core/: fiber_posix.cpp
web/patches/rex/platform/: fpscr.h
web/patches/rex/ppc/: intrinsics.h
web/patches/sys/: eventfd.h
